--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ uvicorn
 sqlalchemy
 psycopg2-binary
 python-jose[cryptography]
-passlib[bcrypt]
+passlib[bcrypt]>=1.7.4
 python-multipart
 pydantic[email]
 python-dotenv
+bcrypt>=4.0.0
